--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,5 +34,11 @@ jobs:
       - name: 'do the thing'
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-428118/notely-ar-repo/notely:latest .
 
-      - name: Deploy to Cloud Run
+      - name: 'Install goose'
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest 
+      
+      - name: 'Migrate DB'
+        run: scripts/migrateup.sh
+
+      - name: 'Deploy to Cloud Run'
         run: gcloud run deploy notely-test --image us-central1-docker.pkg.dev/notely-428118/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-428118 --max-instances=4
